--- a/prometheus.yml
+++ b/prometheus.yml
@@ -10,3 +10,8 @@ scrape_configs:
   - job_name: 'node'
     static_configs:
       - targets: ['localhost:9100']
+
+  - job_name: "Jenkins Job"
+    metrics_path: '/prometheus'
+    static_configs:
+      - targets: ["localhost:8080"]
